deployment/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: deploy
    service: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy
      service: frontend
  template:
    metadata:
      labels:
        app: deploy
        service: frontend
    spec:
      imagePullSecrets:
        - 
          name: gitlab.liu.se 
      containers:
        - name: client
          image: gitlab.liu.se:5000/tddc88-company-1-2021/deploy/client:latest
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 128Mi
      restartPolicy: Always
status: {}
