deployment/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: deploy
    service: backend
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: deploy
      service: backend
  template:
    metadata:
      labels:
        app: deploy
        service: backend
    spec:
      imagePullSecrets:
        -
          name: gitlab.liu.se
      containers:
        - name: server
          image: gitlab.liu.se:5000/tddc88-company-1-2021/deploy/server:latest
          ports:
            -  containerPort: 8080
               protocol: TCP
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
      restartPolicy: Always
status: {}
