deployment/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deploy
  name: client
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: deploy
    service: frontend
  type: ClusterIP
