deployment/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deploy
  name: server
spec:
  ports:
    - name: "8080"
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: deploy
    service: backend
  type: ClusterIP
