deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
  name: simple-fanout-example
  labels:
    app: deploy
spec:
  rules:
  - host: tddc88-company-1-2021.kubernetes-public.it.liu.se
    http:
      paths:
      - path: /
        backend:
          serviceName: client
          servicePort: 80
      - path: /api/
        backend:
          serviceName: server
          servicePort: 80
